# devfest-toolkit-rs

./: .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  README.md  TODO.md  build.sh  lint.sh  start-db.sh
.github/workflows/: ci.yml
dftk-common/: Cargo.toml
dftk-common/src/: lib.rs
dftk-common/src/acl/: operation.rs  user.rs
dftk-common/src/graphql/: scalars.rs
dftk-common/src/models/: language.rs  mod.rs  site.rs  socials.rs  speaker.rs
dftk-common/src/models/schedule/: mod.rs
dftk-common/src/models/session/: category.rs  format.rs  mod.rs
dftk-common/src/models/sponsor/: category.rs  mod.rs
dftk-common/src/models/team/: member_type.rs  mod.rs
dftk-conference-hall/: Cargo.toml
dftk-conference-hall/src/: lib.rs  models.rs
dftk-database/: Cargo.toml
dftk-database/src/: lib.rs  repository.rs  session_categories.rs  session_formats.rs  sessions.rs  speakers.rs  sponsor_type.rs  sponsors.rs  team_member_types.rs  team_members.rs  user.rs
dftk-hugo-site/: Cargo.toml
dftk-hugo-site/src/: data_writer.rs  lib.rs  markdown_writer.rs  site_writer.rs
dftk-hugo-site/src/models/: mod.rs  session.rs  speaker.rs  sponsor.rs  team.rs
dftk-server/: Cargo.toml
dftk-server/dftk-frontend/: .eslintrc.js  .proxyrc.json  ideas.md  package-lock.json  package.json
dftk-server/dftk-frontend/src/: index.css  index.html  index.mjs
dftk-server/dftk-frontend/src/scripts/: dom-helpers.mjs  index.mjs  reducer.mjs  routes.mjs  state.mjs
dftk-server/dftk-frontend/src/scripts/application/: application.mjs
dftk-server/dftk-frontend/src/scripts/components/: index.mjs
dftk-server/dftk-frontend/src/scripts/components/form/: actions.mjs  button.mjs  field.mjs  fieldset.mjs
dftk-server/dftk-frontend/src/scripts/components/menu/: menubar.js  submenu.js
dftk-server/dftk-frontend/src/scripts/fmwk/: actions.mjs  graphql.mjs  index.mjs  logger.mjs  optics.mjs  routes.mjs  store.mjs
dftk-server/dftk-frontend/src/scripts/pages/: form.js  index.mjs
dftk-server/dftk-frontend/src/scripts/pages/general/: general.mjs  users.mjs
dftk-server/dftk-frontend/src/scripts/pages/schedule/: rooms.mjs  schedule.mjs  slots.mjs
dftk-server/dftk-frontend/src/scripts/pages/sessions/: categories.mjs  formats.mjs  sessions.mjs
dftk-server/dftk-frontend/src/scripts/pages/speakers/: speakers.mjs
dftk-server/dftk-frontend/src/scripts/pages/sponsors/: categories.mjs  sponsors.mjs
dftk-server/dftk-frontend/src/scripts/pages/team/: member-types.mjs  team.mjs
dftk-server/dftk-frontend/src/scripts/routes/: current-route.mjs  index.mjs  route.mjs  routes.mjs
dftk-server/examples/: auth.http  categories.http  cors.http  formats.http  member_types.http  site.http  sponsor_categories.http  users.http
dftk-server/src/: authentication.rs  lib.rs  rejection.rs
dftk-server/src/graphql/: categories.rs  formats.rs  info.rs  languages.rs  mod.rs  mutation.rs  query.rs  schedule.rs  sessions.rs  socials.rs  speakers.rs  sponsors.rs  teams.rs  user.rs
dftk-server/src/rest/: categories.rs  formats.rs  mod.rs  sessions.rs  site.rs  speakers.rs  sponsors.rs  sponsors_categories.rs  team.rs  team_member_type.rs  users.rs
src/: clean.rs  generate.rs  lib.rs  main.rs  opts.rs  synchronize.rs
