[package]
name = "devfest-toolkit-rs"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = """
Utilities for devfest conference.
- synchronize conference-hall data to database
- generate site data (used with a static generator like Hugo)
- ...
"""

[dependencies]

dftk-common = { path = "dftk-common", version = "0.1.0", features = ["graphql"] }
dftk-conference-hall = { path = "dftk-conference-hall", version = "0.1.0" }
dftk-hugo-site = { path = "dftk-hugo-site", version = "0.1.0" }
dftk-database = { path = "dftk-database", version = "0.1.0" }
dftk-server = { path = "dftk-server", version = "0.1.0", features = ["graphql", "rest"] }

tokio = { version = "0.2", features = ["macros"] }

chrono = "0.4"

structopt = "0.3"

anyhow = "1.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
colored = "1.9"

[workspace]
members = [
    "dftk-common",
    "dftk-conference-hall",
    "dftk-database",
    "dftk-hugo-site",
    "dftk-server",
]