[package]
name = "dftk-common"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"

[features]
default = []

graphql = ["async-graphql"]

[dependencies]
anyhow = "1.0"
log = "0.4"

slug = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
unic-langid = { version = "0.9.0", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }

async-graphql = { version = "1.16", optional = true }
